@@ -35,6 +35,7 @@ PQXX_HAVE_PQPREPARE	internal	libpq
 PQXX_HAVE_PQEXECPREPARED	internal	libpq
 PQXX_HAVE_PQFREEMEM	internal	libpq
 PQXX_HAVE_PQFREENOTIFY	internal	libpq
+PQXX_HAVE_PQISTHREADSAFE	internal	libpq
 PQXX_HAVE_PQSERVERVERSION	internal	libpq
 PQXX_HAVE_PQPROTOCOLVERSION	internal	libpq
 PQXX_HAVE_PQENCRYPTPASSWORD	internal	libpq
