@@ -1,4 +1,5 @@
 3.1
+ - Threading behaviour is now documented, and can be queried.
  - String conversion now has its own header file.
  - Supports read-only transactions.
  - Fixed breakage with Solaris "make."
